--- a/styles/small_mobiles/small_mobile_blog_styles.css
+++ b/styles/small_mobiles/small_mobile_blog_styles.css
@@ -64,7 +64,7 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                gap: 2vw;
+                gap: 4vw;
 
 
         }
@@ -75,12 +75,13 @@
                 color: white;
                 font-size: 2vw;
                 text-decoration: none;
-                width: 3vw;
-                height: 3vw;
+                width: 10vw;
+                height: 10vw;
                 justify-content: center;
                 text-align: center;
                 align-items: center;
                 margin-bottom: 1vw;
+                font-size: 5vw;
         }
 
 }
